Version History
===============

3.0b4
-----
* Moved css registry manipulation to GS profile, dropped css and js registry
  install code.
  [cah190 (Craig Haynal)]
  
3.0b3
-----
* Dropped the plone3 GS profile, paved over the types/*.xml with versions
  from a working FSD Plone instance.
  [cah190 (Craig Haynal)]

* Don't call Products.Archetypes.Extensions.utils helpers, they seem to make
  Archetypes move itself in the portal_skins lists in a way that breaks
  TinyMCE.
  [cah190 (Craig Haynal)]

* Installer should not be installing ATReferenceBrowserWidget.
  [cah190 (Craig Haynal)]

* Register our skins directory the modern way (through ZCML and skins.xml)
  [cah190 (Craig Haynal)]

* Pin to archetypes.schemaextender < 2.1 because 2.1 and higher use plone.uuid
  which breaks Products.Relations and older versions of Archetypes.
  [cah190 (Craig Haynal)]

* Fixed schema conditions and fsdtool data to prevent authorization failures
  for non-managers editing FSD objects.
  [cah190 (Craig Haynal)]

* Updates to facultystaffdirectory_tool access and security
  [cah190 (Craig Haynal)]

* Made FSD not installable when creating a Plone 4 site (our GS profiles are not
  sufficient for a functional install).
  [cah190 (Craig Haynal)]

3.0b2
-----
* Added a lines field to the facultystaffdirectory_tool that contains the list of
  active states.
  [cah190 (Craig Haynal)]

* Inactive users will now fail to authenticate.
  [cah190 (Craig Haynal)]

* Inactive groups will now appear as empty groups.
  [cah190 (Craig Haynal)]

* Fixed author.cpt to work in Plone 4 by adding missing globals.
  [cah190 (Craig Haynal)]

* Replaced direct page template references to facultystaffdirectory_tool with 
  getToolByName lookups to allow for anonymous viewing of listings.
  [cah190 (Craig Haynal)]

* Added missing icon references to GS type information.
  [cah190 (Craig Haynal)]

* Defined global variables (template_id, normalizeString, member) in skin templates.