@@ -1,4 +1,8 @@
 <?xml version="1.0"?>
 <metadata>
-    <version>3</version>
+    <version>4</version>
+    <dependencies>
+        <dependency>profile-Products.membrane:default</dependency>
+        <dependency>profile-Products.Relations:default</dependency>
+    </dependencies>
 </metadata>
